--- a/package.json
+++ b/package.json
@@ -1,16 +1,31 @@
 {
   "name": "get-express-starter",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Get production ready express boilerplate with a single command",
   "bin": {
     "get-express-starter": "./index.js"
   },
   "keywords": [
-    "cli",
-    "api",
     "express",
-    "boilerplate",
-    "generator"
+    "express boilerplate",
+    "express generator",
+    "express cli",
+    "node starter",
+    "api boilerplate",
+    "express typescript",
+    "nodejs starter",
+    "express scaffold",
+    "rest api starter",
+    "typescript api starter",
+    "express prisma",
+    "express drizzle",
+    "express mongodb",
+    "express postgresql",
+    "express docker",
+    "jwt auth",
+    "api authentication",
+    "node cli",
+    "create express app"
   ],
   "author": "hassandev404@gmail.com",
   "license": "MIT",
