--- a/templates/node-express-boilerplate/package.json
+++ b/templates/node-express-boilerplate/package.json
@@ -13,7 +13,7 @@
     "prepare": "husky"
   },
   "keywords": [],
-  "author": "",
+  "author": "hassandev404@gmail.com",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.5",
@@ -49,7 +49,7 @@
     "eslint-plugin-security": "^1.4.0",
     "husky": "^9.1.7",
     "lint-staged": "^11.0.0",
-    "nodemon": "^2.0.0",
+    "nodemon": "^3.1.10",
     "prettier": "^2.0.5"
   },
   "lint-staged": {
