updated templates fixing docker setup, build and refactoring

--- a/templates/express-postgres-prisma/package.json
+++ b/templates/express-postgres-prisma/package.json
@@ -4,8 +4,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch --clear-screen=false src/index.ts",
-    "build": "tsup",
+    "build": "tsc --noEmit && tsup",
     "start": "pm2 start ecosystem.config.json --no-daemon --env production ",
+    "start:dev": "tsc && tsx src/index",
     "clean": "rm -rf dist",
     "format": "biome format . --write",
     "lint": "biome lint ./src",
@@ -14,11 +15,13 @@
     "prisma:migrate:dev": "prisma migrate dev",
     "prisma:migrate:deploy": "prisma migrate deploy",
     "prisma:generate": "prisma generate",
+    "prisma:remove": "rm -rf ./generated",
     "prisma:push": "prisma db push",
     "prisma:pull": "prisma db pull",
     "prisma:seed": "prisma db seed",
     "prisma:studio": "prisma studio -n 0.0.0.0",
-    "docker:start": "docker compose up --env-file ./.env.production --build -d",
+    "start:docker": "docker compose up --env-file ./.env.production --build -d",
+    "seed:admin": "tsx ./scripts/seed-admin.ts",
     "prepare": "husky",
     "postinstall": "prisma generate"
   },
