--- a/templates/nodets-express-boilerplate/package.json
+++ b/templates/nodets-express-boilerplate/package.json
@@ -4,13 +4,15 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch --clear-screen=false src/index.ts",
-    "build": "tsup",
+    "build": "tsc --noEmit && tsup",
     "start": "pm2 start ecosystem.config.json --no-daemon --env production ",
+    "start:dev": "tsc && tsx src/index",
     "clean": "rm -rf dist",
-    "format": "biome format . --write",
+    "format": "biome format ./src --write",
     "lint": "biome lint ./src",
     "lint:fix": "biome lint ./src --write",
     "test": "echo Add a test library",
+    "seed:admin": "tsx ./scripts/seed-admin.ts",
     "prepare": "husky"
   },
   "keywords": [],
