--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "get-express-starter",
-  "version": "3.3.0",
+  "version": "3.3.1",
   "description": "Get production ready express boilerplate with a single command",
   "bin": {
-    "get-express-starter": "./index.js"
+    "get-express-starter": "./source/index.js"
   },
+  "main": "./source/index.js",
   "keywords": [
     "express",
     "express boilerplate",
@@ -26,14 +27,13 @@
     "node cli",
     "create express app"
   ],
-  "author": "Hassan Dev <hassandev404@gmail.com> (https://github.com/hassandev404)",
+  "author": "Muhammad Hassan <hassandev404@gmail.com> (https://github.com/logicalHassan)",
   "license": "MIT",
   "dependencies": {
     "prompts": "^2.4.2"
   },
   "files": [
-    "index.js",
-    "custom-logger.js",
+    "source",
     "package.json",
     "README.md"
   ],
